--- a/index.html
+++ b/index.html
@@ -493,69 +493,35 @@
         </div>
       </section>
 
-       <div class="container d-flex flex-wrap">
-        <div class="row">
-        <div
-          class="gamechanging-cont text-light bg-secondary col-4 rounded-5 p-5 pos"
-        >
-          <h1>GAME CHANGING INSIGHTS</h1>
-          <p>
-            "Incredible speakers, top-tier networking, and cutting-edge
-            discussions all in one place."
-          </p>
-          <div class="imgdp d-flex">
-            <img
-              src="assests/past attendees section/past attendees img2.svg"
-              alt=""
-            />
-            <p class="ps-5 pt-4">
-              Davilass Laurent <br />
-              CEO, FutureAI Labs
-            </p>
+       <section class="container">
+        <div class="row g-5">
+          <div class="col-md-4 text-light bg-secondary rounded-5 p-5">
+            <h3>GAME CHANGING INSIGHTS</h3>
+            <p class="py-3">"Incredible speakers, top-tier networking, and cutting-edge discussions all in one place."</p>
+            <div class="insidediv d-flex py-3">
+              <img class="image-fluid" src="Assets/attendees images/attendees card img1.svg" alt="">
+              <p class="ps-4">David Laurent <br> CEO, FutureAI Labs </p>
+            </div>
+          </div>
+          <div class="col-md-4 text-light bg-primary rounded-5 p-5">
+            <h3>THE BEST AI EVENT!</h3>
+            <p class="py-5">"From hands-on workshops to visionary talks, this summit is a must-attend for AI professionals."</p>
+            <div class="insidediv d-flex">
+              <img class="image-fluid" src="Assets/attendees images/attendees card img 2.svg" alt="">
+              <p class="ps-4">Elena Rojas <br> AI Researcher, DeepMind </p>
+            </div>
+          </div>
+         <div class="col-md-4 text-light bg-light text-dark rounded-5 p-5">
+            <h3>UNMATCHED OPPORTUNITIES</h3>
+            <p class="py-3">"Incredible speakers, top-tier networking, and cutting-edge discussions all in one place."</p>
+            <div class="insidediv d-flex py-3">
+              <img class="image-fluid" src="Assets/attendees images/attendees card img1.svg" alt="">
+              <p class="ps-4">David Laurent <br> CEO, FutureAI Labs </p>
+            </div>
           </div>
         </div>
-        <div
-          class="gamechanging-cont text-light bg-primary col-4 rounded-5 p-5"
-        >
-          <h1>
-            THE BEST AI <br />
-            EVENT!
-          </h1>
-          <p>
-            "Incredible speakers, top-tier networking, and cutting-edge
-            discussions all in one place."
-          </p>
-          <div class="imgdp d-flex">
-            <img
-              class="pt-5"
-              src="assests/past attendees section/past attendees img1.svg"
-              alt=""
-            />
-            <p class="ps-5 pt-5">
-              Elena Rojas <br />
-              AI Researcher, DeepMind
-            </p>
-          </div>
-        </div>
-        <div class="gamechanging-cont text-dark bg-light col-4 rounded-5 p-5">
-          <h1>GAME CHANGING INSIGHTS</h1>
-          <p>
-            "Incredible speakers, top-tier networking, and cutting-edge
-            discussions all in one place."
-          </p>
-          <div class="imgdp d-flex">
-            <img
-              src="assests/past attendees section/past attendees img2.svg"
-              alt=""
-            />
-            <p class="ps-5 pt-4">
-              Davilass Laurent <br />
-              CEO, FutureAI Labs
-            </p>
-          </div>
-        </div>
-      </div>
-      </div>
+      </section>
+
 
      
 
