--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 
        <section class="container">
         <div class="row g-5">
-          <div class="col-md-4 text-light bg-secondary rounded-5 p-5">
+          <div class="col-md-4 text-light rounded-5 p-5" style="background-color: #1A1A1A;">
             <h3>GAME CHANGING INSIGHTS</h3>
             <p class="py-3">"Incredible speakers, top-tier networking, and cutting-edge discussions all in one place."</p>
             <div class="insidediv d-flex py-3">
