--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
                 <p class="mt-2 fs-5 ps-2">
                   Hear from global AI leaders, <br />
                   researchers, and entrepreneurs <br />
-                  who are defining the future of <br />
-                  artificial intelligence.
+                  who are defining the future.
                 </p>
               </div>
 
@@ -160,28 +159,27 @@
                 <img
                   src="Assets/header images/speaker section circle icon/speakerimg1.svg"
                   class="rounded-circle mb-3 "
-                  style="width: 65px; height: 65px; position: absolute; left: 30px; top: 350px;"
                   id="imgicon1"
                 />
                 <img
                   src="Assets/header images/speaker section circle icon/speakerimg2.svg"
                   class="rounded-circle mb-3"
-                  style="width: 65px; height: 65px; position: absolute; left: 60px; top: 350px;"
+                  id="imgicon2"
                 />
                 <img
                   src="Assets/header images/speaker section circle icon/speakerimg3.svg"
                   class="rounded-circle mb-3"
-                  style="width: 65px; height: 65px; position: absolute; left: 90px; top: 350px;"
+                  id="imgicon3"
                 />
                 <img
                   src="Assets/header images/speaker section circle icon/speakerimg4.svg"
                   class="rounded-circle mb-3"
-                  style="width: 65px; height: 65px; position: absolute; left: 120px; top: 350px;"
+                  id="imgicon4"
                 />
 
                 <a
                   href="#"
-                  class="btn btn-outline-light btn-sm ms-5 mb-3 rounded-5 px-5 py-3 fs-4-lg" style="position: absolute; right: 50px; top: 350px;"
+                  class="btn btn-outline-light btn-sm ms-5 mb-3 rounded-5 px-5 py-3 fs-4-lg" id="bttn1" style=""
                   >And more <i class="bi bi-arrow-up-right text-light"></i>
                 </a>
               </div>
